--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "bundle/command-t"]
 	path = bundle/command-t
 	url = git://git.wincent.com/command-t.git
+[submodule "bundle/indentLine"]
+	path = bundle/indentLine
+	url = git://github.com/Yggdroot/indentLine.git
