--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "bundle/vim-gitgutter"]
 	path = bundle/vim-gitgutter
-	url = git://github.com/airblade/vim-gitgutter.git
+	url = https://github.com/airblade/vim-gitgutter.git
 [submodule "bundle/nerdcommenter"]
 	path = bundle/nerdcommenter
-	url = git://github.com/scrooloose/nerdcommenter.git
+	url = https://github.com/scrooloose/nerdcommenter.git
 [submodule "bundle/neocomplcache.vim"]
 	path = bundle/neocomplcache.vim
-	url = git://github.com/Shougo/neocomplcache.vim.git
+	url = https://github.com/Shougo/neocomplcache.vim.git
 [submodule "bundle/command-t"]
 	path = bundle/command-t
-	url = git://git.wincent.com/command-t.git
+	url = https://git.wincent.com/command-t.git
 [submodule "bundle/vim-jsbeautify"]
 	path = bundle/vim-jsbeautify
 	url = https://github.com/maksimr/vim-jsbeautify.git
@@ -18,10 +18,10 @@
 	url = https://github.com/scrooloose/syntastic.git
 [submodule "bundle/vim-blade"]
 	path = bundle/vim-blade
-	url = git://github.com/xsbeats/vim-blade.git
+	url = https://github.com/xsbeats/vim-blade.git
 [submodule "bundle/vim-mustache-handlebars"]
 	path = bundle/vim-mustache-handlebars
-	url = git://github.com/mustache/vim-mustache-handlebars.git
+	url = https://github.com/mustache/vim-mustache-handlebars.git
 [submodule "bundle/vim-twig"]
 	path = bundle/vim-twig
 	url = https://github.com/evidens/vim-twig.git
@@ -30,4 +30,4 @@
 	url = https://github.com/bling/vim-airline
 [submodule "bundle/vim-jsx"]
 	path = bundle/vim-jsx
-	url = git@github.com:mxw/vim-jsx.git
+	url = https://github.com/mxw/vim-jsx.git
